Enable completion code generation
Add 'Cash Out' button in client
Allow client to request completion code from server
Generate completion code serverside and write to database
Send completion code from server to client

--- a/ContagionClient/index.html
+++ b/ContagionClient/index.html
@@ -45,6 +45,9 @@
 				<div id="modal_close">
 					<img src="sprites/new_game_button.png"/>
 				</div>
+				<div id="modal_cash_out">
+					<img src="sprites/cash_out_button.png"/>
+				</div>
 			</div>
 		</div>
 
