Add client side reward display on game end

--- a/ContagionClient/index.html
+++ b/ContagionClient/index.html
@@ -1163,6 +1163,11 @@ Sorry, not done yet! These Bonus Boxes need you to TRANSLATE, too:
 </controls>
 
 <endgame id="winner">
+	<div id="endgame_content"></div>
+	<canvas id="scorechart" width="700" height="400"></canvas>
+</endgame>
+
+<!-- <endgame id="winner">
 	<h3> Congratulations! </h3>
 	<h3> You Won $some </h3>
 	<div>
@@ -1176,8 +1181,7 @@ Sorry, not done yet! These Bonus Boxes need you to TRANSLATE, too:
 	<div>
 	Make sure you click "Cash Out" below to recieve your prize!
 	<canvas id="scorechart" width="700" height="400"></canvas>
-
-</endgame>
+</endgame> -->
 
 <bonus id="books">
 
