Add simple modal to display completion code

--- a/ContagionClient/index.html
+++ b/ContagionClient/index.html
@@ -1167,6 +1167,14 @@ Sorry, not done yet! These Bonus Boxes need you to TRANSLATE, too:
 	<canvas id="scorechart" width="700" height="400"></canvas>
 </endgame>
 
+<cashout id="winner">
+	<h3> Your completion code: </h3>
+	<h2 id="completion_code"></h2>
+	<div>
+	<div>
+	Enter this code in the MTurk HIT form so that we can pay you your reward
+</cashout>
+
 <!-- <endgame id="winner">
 	<h3> Congratulations! </h3>
 	<h3> You Won $some </h3>
