Remove informal tutorial text

--- a/ContagionClient/index.html
+++ b/ContagionClient/index.html
@@ -206,7 +206,7 @@
 
 	<div style="color:#999">
 		<!-- TRANSLATE note: comment out the line below... -->
-		original by nicky case • expanded by lewis hill
+		original by nicky case • expanded by lewis hill and matthew jones
 		<!-- ...and UN-comment + TRANSLATE this line! -->
 		<!-- by nicky case • translated by [your name] • <a href='.'>original in English</a> -->
 	</div>
@@ -358,15 +358,15 @@
 
 <words id="tutorial_1">
 
-	This is a peep. It is very cute.
-	<next wiggle>I agree <div class="rarr"></div> </next>
+	This is a node.
+	<next wiggle>Got it <div class="rarr"></div> </next>
 
 </words>
 
 <words id="tutorial_2_1">
 
-	This is a network. It is even cuter.
-	<next wiggle>Uhhh </next>
+	This is a network.
+	<next wiggle>Okay </next>
 
 </words>
 
@@ -379,7 +379,7 @@
 
 <words id="tutorial_2_3">
 
-	Peeps get controlled when you give them <b>TOKENS</b>.
+	Nodes can be controlled when you give them <b>TOKENS</b>.
 
 </words>
 
@@ -397,7 +397,7 @@
 
 <words id="tutorial_2_4">
 
-	Now you're a master of clicking, pick one of these peeps to add a token to.
+	Now you're a master of clicking, pick one of these nodes to add a token to.
 
 </words>
 
@@ -409,14 +409,14 @@
 
 <words id="tutorial_2_6">
 
-	Between rounds, any peeps that have a token will be converted to that token's <font color="green">colour</font>!
+	Between rounds, any nodes that have a token will be converted to that token's <font color="green">colour</font>!
 	<next wiggle>Pretty! <div class="rarr"></div> </next>
 
 </words>
 
 <words id="tutorial_2_7">
 
-	But that's not the only way to control peeps! Any peep <b>connected</b> to a coloured peep will convert to that colour between rounds.
+	But that's not the only way to control nodes! Any node <b>connected</b> to a coloured node will convert to that colour between rounds.
 	<br>
 	We call these connections and tokens <i>sources of influence</i>.
 
@@ -424,31 +424,31 @@
 
 <words id="tutorial_2_8">
 
-	Click <b>Begin Round</b> again and see your peep infect the network! Repeat until they're ALL YOURS!
+	Click <b>Begin Round</b> again and see your node infect the network! Repeat until they're ALL YOURS!
 
 </words>
 
 <words id="tutorial_2_9">
 
-	In the main game, you'll earn 10 points each round for every peep you control!
+	In the main game, you'll earn 10 points each round for every node you control!
 	<br>
 	On the final round, you earn <font color="green">five times the points!</font>
-	<next wiggle>I love numbers! <div class="rarr"></div> </next>
+	<next wiggle>Cool!<div class="rarr"></div> </next>
 
 </words>
 
 <words id="tutorial_3_1">
 
 	<b>BUT!</b> You have an opponent trying to do the same thing!
-	<next wiggle>Ruh roh <div class="rarr"></div> </next>
+	<next wiggle>Uh oh<div class="rarr"></div> </next>
 
 </words>
 
 <words id="tutorial_3_2">
 
-	Between rounds, peeps pick a <i> source of influence </i> at random, and adopt that colour!
+	Between rounds, nodes pick a <i> source of influence </i> at random, and adopt that colour!
 	<br>
-	See the numbers above the left and right peeps? That's the <b>chance</b> that peep will be yours at the end of the round.
+	See the numbers above the left and right nodes? That's the <b>chance</b> that node will be yours at the end of the round.
 
 </words>
 
@@ -460,7 +460,7 @@
 
 <words id="tutorial_3_3_1">
 
-	See the middle peep's number change to 50%? That's because there's one <font color="green">green</font> and one <font color="red">red</font> neighbour.
+	See the middle node's number change to 50%? That's because there's one <font color="green">green</font> and one <font color="red">red</font> neighbour.
 	<br>
 	With one <font color="green">friendly</font> and one <font color="red">enemy</font> influence, there's a 50/50 chance
 	it will be
@@ -475,7 +475,7 @@
 
 <words id="tutorial_3_3_2">
 
-	Yay! Your expert strategy paid off, and you controlled the middle peep!
+	Yay! Your expert strategy paid off, and you controlled the middle node!
 	<next wiggle>I am a master strategist <div class="rarr"></div> </next>
 
 </words>
@@ -484,10 +484,10 @@
 	Each game has 10 rounds.
 	<br>Each round, you get to place one new token!
 	<br><br>Whoever has the most points at the end wins!
-	<br> 	But <i>don't despair</i> if all looks lost. Even if you lose, the more points you have, the more <b>PIZZA</b> you get next demo!
+	<!-- <br> 	But <i>don't despair</i> if all looks lost. Even if you lose, the more points you have, the more <b>PIZZA</b> you get next demo! -->
 	<br><br>
-	Once everyone has played <b>8</b> games, we can progress (and the next demo will happen sooner!)
-	<next wiggle>I am ready to get pizza'd <div class="rarr"></div> </next>
+	<!-- Once everyone has played <b>8</b> games, we can progress (and the next demo will happen sooner!) -->
+	<next wiggle>I am ready to play!<div class="rarr"></div> </next>
 
 </words>
 
